# EnglishPosTagger-CPP

./: .gitignore  CMakeLists.txt  DummyPosTagger.cpp  DummyPosTagger.h  HmmPosTagger.cpp  HmmPosTagger.h  NaivePosTagger.cpp  NaivePosTagger.h  PosTaggedCorpus.cpp  PosTaggedCorpus.h  PosTaggedWord.cpp  PosTaggedWord.h  PosTagger.h  README.md  TestPosTag.cpp  conanfile.py  conanfile.txt
Test/: DummyPosTaggerTest.cpp  HmmPosTaggerTest.cpp  NaivePosTaggerTest.cpp
include/: Hmm.h  Hmm1.h  HmmState.h  Word.h
src/: CMakeLists.txt  DummyPosTagger.cpp  DummyPosTagger.h  HmmPosTagger.cpp  HmmPosTagger.h  NaivePosTagger.cpp  NaivePosTagger.h  PosTaggedCorpus.cpp  PosTaggedCorpus.h  PosTaggedWord.cpp  PosTaggedWord.h  PosTagger.h
